seaqt/QtNetwork/gen_qnetworkdiskcache.nim

import ./Qt5Network_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Network")  & " -fPIC"
{.compile("gen_qnetworkdiskcache.cpp", cflags).}


import ./gen_qnetworkdiskcache_types
export gen_qnetworkdiskcache_types

import
  ../QtCore/gen_qcoreevent_types,
  ../QtCore/gen_qiodevice_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject_types,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qurl_types,
  ./gen_qabstractnetworkcache
export
  gen_qcoreevent_types,
  gen_qiodevice_types,
  gen_qmetaobject_types,
  gen_qobject_types,
  gen_qobjectdefs_types,
  gen_qurl_types,
  gen_qabstractnetworkcache

type cQNetworkDiskCache*{.exportc: "QNetworkDiskCache", incompleteStruct.} = object

proc fcQNetworkDiskCache_new(): ptr cQNetworkDiskCache {.importc: "QNetworkDiskCache_new".}
proc fcQNetworkDiskCache_new2(parent: pointer): ptr cQNetworkDiskCache {.importc: "QNetworkDiskCache_new2".}
proc fcQNetworkDiskCache_metaObject(self: pointer, ): pointer {.importc: "QNetworkDiskCache_metaObject".}
proc fcQNetworkDiskCache_metacast(self: pointer, param1: cstring): pointer {.importc: "QNetworkDiskCache_metacast".}
proc fcQNetworkDiskCache_tr(s: cstring): struct_miqt_string {.importc: "QNetworkDiskCache_tr".}
proc fcQNetworkDiskCache_trUtf8(s: cstring): struct_miqt_string {.importc: "QNetworkDiskCache_trUtf8".}
proc fcQNetworkDiskCache_cacheDirectory(self: pointer, ): struct_miqt_string {.importc: "QNetworkDiskCache_cacheDirectory".}
proc fcQNetworkDiskCache_setCacheDirectory(self: pointer, cacheDir: struct_miqt_string): void {.importc: "QNetworkDiskCache_setCacheDirectory".}
proc fcQNetworkDiskCache_maximumCacheSize(self: pointer, ): clonglong {.importc: "QNetworkDiskCache_maximumCacheSize".}
proc fcQNetworkDiskCache_setMaximumCacheSize(self: pointer, size: clonglong): void {.importc: "QNetworkDiskCache_setMaximumCacheSize".}
proc fcQNetworkDiskCache_cacheSize(self: pointer, ): clonglong {.importc: "QNetworkDiskCache_cacheSize".}
proc fcQNetworkDiskCache_metaData(self: pointer, url: pointer): pointer {.importc: "QNetworkDiskCache_metaData".}
proc fcQNetworkDiskCache_updateMetaData(self: pointer, metaData: pointer): void {.importc: "QNetworkDiskCache_updateMetaData".}
proc fcQNetworkDiskCache_data(self: pointer, url: pointer): pointer {.importc: "QNetworkDiskCache_data".}
proc fcQNetworkDiskCache_remove(self: pointer, url: pointer): bool {.importc: "QNetworkDiskCache_remove".}
proc fcQNetworkDiskCache_prepare(self: pointer, metaData: pointer): pointer {.importc: "QNetworkDiskCache_prepare".}
proc fcQNetworkDiskCache_insert(self: pointer, device: pointer): void {.importc: "QNetworkDiskCache_insert".}
proc fcQNetworkDiskCache_fileMetaData(self: pointer, fileName: struct_miqt_string): pointer {.importc: "QNetworkDiskCache_fileMetaData".}
proc fcQNetworkDiskCache_clear(self: pointer, ): void {.importc: "QNetworkDiskCache_clear".}
proc fcQNetworkDiskCache_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QNetworkDiskCache_tr2".}
proc fcQNetworkDiskCache_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QNetworkDiskCache_tr3".}
proc fcQNetworkDiskCache_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QNetworkDiskCache_trUtf82".}
proc fcQNetworkDiskCache_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QNetworkDiskCache_trUtf83".}
proc fQNetworkDiskCache_virtualbase_cacheSize(self: pointer, ): clonglong{.importc: "QNetworkDiskCache_virtualbase_cacheSize".}
proc fcQNetworkDiskCache_override_virtual_cacheSize(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_cacheSize".}
proc fQNetworkDiskCache_virtualbase_metaData(self: pointer, url: pointer): pointer{.importc: "QNetworkDiskCache_virtualbase_metaData".}
proc fcQNetworkDiskCache_override_virtual_metaData(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_metaData".}
proc fQNetworkDiskCache_virtualbase_updateMetaData(self: pointer, metaData: pointer): void{.importc: "QNetworkDiskCache_virtualbase_updateMetaData".}
proc fcQNetworkDiskCache_override_virtual_updateMetaData(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_updateMetaData".}
proc fQNetworkDiskCache_virtualbase_data(self: pointer, url: pointer): pointer{.importc: "QNetworkDiskCache_virtualbase_data".}
proc fcQNetworkDiskCache_override_virtual_data(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_data".}
proc fQNetworkDiskCache_virtualbase_remove(self: pointer, url: pointer): bool{.importc: "QNetworkDiskCache_virtualbase_remove".}
proc fcQNetworkDiskCache_override_virtual_remove(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_remove".}
proc fQNetworkDiskCache_virtualbase_prepare(self: pointer, metaData: pointer): pointer{.importc: "QNetworkDiskCache_virtualbase_prepare".}
proc fcQNetworkDiskCache_override_virtual_prepare(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_prepare".}
proc fQNetworkDiskCache_virtualbase_insert(self: pointer, device: pointer): void{.importc: "QNetworkDiskCache_virtualbase_insert".}
proc fcQNetworkDiskCache_override_virtual_insert(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_insert".}
proc fQNetworkDiskCache_virtualbase_clear(self: pointer, ): void{.importc: "QNetworkDiskCache_virtualbase_clear".}
proc fcQNetworkDiskCache_override_virtual_clear(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_clear".}
proc fQNetworkDiskCache_virtualbase_expire(self: pointer, ): clonglong{.importc: "QNetworkDiskCache_virtualbase_expire".}
proc fcQNetworkDiskCache_override_virtual_expire(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_expire".}
proc fQNetworkDiskCache_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QNetworkDiskCache_virtualbase_event".}
proc fcQNetworkDiskCache_override_virtual_event(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_event".}
proc fQNetworkDiskCache_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QNetworkDiskCache_virtualbase_eventFilter".}
proc fcQNetworkDiskCache_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_eventFilter".}
proc fQNetworkDiskCache_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QNetworkDiskCache_virtualbase_timerEvent".}
proc fcQNetworkDiskCache_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_timerEvent".}
proc fQNetworkDiskCache_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QNetworkDiskCache_virtualbase_childEvent".}
proc fcQNetworkDiskCache_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_childEvent".}
proc fQNetworkDiskCache_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QNetworkDiskCache_virtualbase_customEvent".}
proc fcQNetworkDiskCache_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_customEvent".}
proc fQNetworkDiskCache_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QNetworkDiskCache_virtualbase_connectNotify".}
proc fcQNetworkDiskCache_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_connectNotify".}
proc fQNetworkDiskCache_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QNetworkDiskCache_virtualbase_disconnectNotify".}
proc fcQNetworkDiskCache_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QNetworkDiskCache_override_virtual_disconnectNotify".}
proc fcQNetworkDiskCache_delete(self: pointer) {.importc: "QNetworkDiskCache_delete".}


func init*(T: type gen_qnetworkdiskcache_types.QNetworkDiskCache, h: ptr cQNetworkDiskCache): gen_qnetworkdiskcache_types.QNetworkDiskCache =
  T(h: h)
proc create*(T: type gen_qnetworkdiskcache_types.QNetworkDiskCache, ): gen_qnetworkdiskcache_types.QNetworkDiskCache =
  gen_qnetworkdiskcache_types.QNetworkDiskCache.init(fcQNetworkDiskCache_new())

proc create*(T: type gen_qnetworkdiskcache_types.QNetworkDiskCache, parent: gen_qobject_types.QObject): gen_qnetworkdiskcache_types.QNetworkDiskCache =
  gen_qnetworkdiskcache_types.QNetworkDiskCache.init(fcQNetworkDiskCache_new2(parent.h))

proc metaObject*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQNetworkDiskCache_metaObject(self.h))

proc metacast*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, param1: cstring): pointer =
  fcQNetworkDiskCache_metacast(self.h, param1)

proc tr*(_: type gen_qnetworkdiskcache_types.QNetworkDiskCache, s: cstring): string =
  let v_ms = fcQNetworkDiskCache_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qnetworkdiskcache_types.QNetworkDiskCache, s: cstring): string =
  let v_ms = fcQNetworkDiskCache_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc cacheDirectory*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, ): string =
  let v_ms = fcQNetworkDiskCache_cacheDirectory(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCacheDirectory*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, cacheDir: string): void =
  fcQNetworkDiskCache_setCacheDirectory(self.h, struct_miqt_string(data: cacheDir, len: csize_t(len(cacheDir))))

proc maximumCacheSize*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, ): clonglong =
  fcQNetworkDiskCache_maximumCacheSize(self.h)

proc setMaximumCacheSize*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, size: clonglong): void =
  fcQNetworkDiskCache_setMaximumCacheSize(self.h, size)

proc cacheSize*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, ): clonglong =
  fcQNetworkDiskCache_cacheSize(self.h)

proc metaData*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, url: gen_qurl_types.QUrl): gen_qabstractnetworkcache_types.QNetworkCacheMetaData =
  gen_qabstractnetworkcache_types.QNetworkCacheMetaData(h: fcQNetworkDiskCache_metaData(self.h, url.h))

proc updateMetaData*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, metaData: gen_qabstractnetworkcache_types.QNetworkCacheMetaData): void =
  fcQNetworkDiskCache_updateMetaData(self.h, metaData.h)

proc data*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, url: gen_qurl_types.QUrl): gen_qiodevice_types.QIODevice =
  gen_qiodevice_types.QIODevice(h: fcQNetworkDiskCache_data(self.h, url.h))

proc remove*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, url: gen_qurl_types.QUrl): bool =
  fcQNetworkDiskCache_remove(self.h, url.h)

proc prepare*(self: gen_qnetworkdiskcache_types.QNetworkDiskCache, metaData: gen_qabstractnetworkcache_types.QNetworkCacheMetaData): gen_qiodevice_types.QIODevice =
  gen_qiodevice_types.QIODevice(h: fcQNetworkDiskCache_prepare(self.h, metaData.h))
